// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentFilters when components prop is set to multiple components renders minimal filters 1`] = `
"<div class=\\"mt-3 mb-4\\"><button id=\\"toggle-filters\\" type=\\"button\\" class=\\"btn btn-secondary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\" style=\\"column-count: 3;\\">
        <!---->
        <!---->
        <!---->
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\"><label class=\\"custom-control-label\\"><span>undefined</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <div role=\\"group\\" class=\\"form-group\\"><label for=\\"component-filter\\" class=\\"d-block\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ComponentFilters when components prop is set to multiple components with all filterable fields renders all the filters, including component filter but excluding the test outcomes filter 1`] = `
"<div class=\\"mt-3 mb-4\\"><button id=\\"toggle-filters\\" type=\\"button\\" class=\\"btn btn-secondary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\" style=\\"column-count: 3;\\">
        <!---->
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-1-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-1-b</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-2-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-2-b</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-3-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-3-b</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-a\\"><label class=\\"custom-control-label\\"><span>test-tag-1-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-b\\"><label class=\\"custom-control-label\\"><span>test-tag-1-b</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-a\\"><label class=\\"custom-control-label\\"><span>test-tag-2-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-a\\"><label class=\\"custom-control-label\\"><span>test-tag-3-a</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-1\\"><label class=\\"custom-control-label\\"><span>test-platform-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-2\\"><label class=\\"custom-control-label\\"><span>test-platform-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-3\\"><label class=\\"custom-control-label\\"><span>test-platform-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <div role=\\"group\\" class=\\"form-group\\"><label for=\\"component-filter\\" class=\\"d-block\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ComponentFilters when components prop is set to multiple components with all filterable fields when component filter is not enabled, does not render the component filter 1`] = `
"<div class=\\"mt-3 mb-4\\"><button id=\\"toggle-filters\\" type=\\"button\\" class=\\"btn btn-secondary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\" style=\\"column-count: 3;\\">
        <!---->
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-1-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-1-b</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-2-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-2-b</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-3-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-3-b</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-a\\"><label class=\\"custom-control-label\\"><span>test-tag-1-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-b\\"><label class=\\"custom-control-label\\"><span>test-tag-1-b</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-a\\"><label class=\\"custom-control-label\\"><span>test-tag-2-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-a\\"><label class=\\"custom-control-label\\"><span>test-tag-3-a</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-1\\"><label class=\\"custom-control-label\\"><span>test-platform-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-2\\"><label class=\\"custom-control-label\\"><span>test-platform-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-3\\"><label class=\\"custom-control-label\\"><span>test-platform-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ComponentFilters when components prop is set to multiple components with all filterable fields when test outcomes filter is enabled, renders the test outcomes filter 1`] = `
"<div class=\\"mt-3 mb-4\\"><button id=\\"toggle-filters\\" type=\\"button\\" class=\\"btn btn-secondary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\" style=\\"column-count: 3;\\">
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Test Outcomes</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"fail\\"><label class=\\"custom-control-label\\"><span>fail</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"not-applicable\\"><label class=\\"custom-control-label\\"><span>not-applicable</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"pass\\"><label class=\\"custom-control-label\\"><span>pass</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-1-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-1-b</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-2-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-2-b</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-3-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-3-b</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-a\\"><label class=\\"custom-control-label\\"><span>test-tag-1-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-b\\"><label class=\\"custom-control-label\\"><span>test-tag-1-b</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-a\\"><label class=\\"custom-control-label\\"><span>test-tag-2-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-a\\"><label class=\\"custom-control-label\\"><span>test-tag-3-a</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-1\\"><label class=\\"custom-control-label\\"><span>test-platform-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-2\\"><label class=\\"custom-control-label\\"><span>test-platform-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-3\\"><label class=\\"custom-control-label\\"><span>test-platform-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <div role=\\"group\\" class=\\"form-group\\"><label for=\\"component-filter\\" class=\\"d-block\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ComponentFilters when components prop is set to multiple components with duplicate filter values dedupes the filter values 1`] = `
"<div class=\\"mt-3 mb-4\\"><button id=\\"toggle-filters\\" type=\\"button\\" class=\\"btn btn-secondary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\" style=\\"column-count: 3;\\">
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Test Outcomes</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"fail\\"><label class=\\"custom-control-label\\"><span>fail</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"not-applicable\\"><label class=\\"custom-control-label\\"><span>not-applicable</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"pass\\"><label class=\\"custom-control-label\\"><span>pass</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-a\\"><label class=\\"custom-control-label\\"><span>test-team-id-1-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-b\\"><label class=\\"custom-control-label\\"><span>test-team-id-1-b</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-a\\"><label class=\\"custom-control-label\\"><span>test-tag-1-a</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-b\\"><label class=\\"custom-control-label\\"><span>test-tag-1-b</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\"><label class=\\"custom-control-label\\"><span>test-component-type-id-1</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <fieldset class=\\"form-group\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-1\\"><label class=\\"custom-control-label\\"><span>test-platform-id-1</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </p>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <!---->
            <!---->
            <p class=\\"card-text\\">
              <div role=\\"group\\" class=\\"form-group\\"><label for=\\"component-filter\\" class=\\"d-block\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;
